# satori

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: sdk-helper.cc  sdk-helper.h  sdk-session.h
app/src/main/java/com/eemagine/eego/sdk/: jni.java
app/src/main/java/com/eemagine/satori/: satoriActivity.java
app/src/main/jni/: Android.mk  Application.mk  boost.mk  eego-sdk.mk  gl-helper.cc  gl-helper.h  libusb.mk  sdk-helper.cc  sdk-helper.h  sdk-recording.h  sdk-test1.cc  sdk-test1.mk
app/src/main/jniLibs/armeabi-v7a/: README.md
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: device_filter.xml
edi-framework/: README.md
